Fix scrollbar

--- a/ui/extension/src/core/popup/styles/extra.css
+++ b/ui/extension/src/core/popup/styles/extra.css
@@ -5,14 +5,14 @@
 body {
   width: 380px;
   height: 600px;
+  max-height: 600px;
   margin: 0;
 
   @apply bg-background text-foreground;
 }
 
-#app,
-body {
-  @apply flex flex-col flex-1;
+#app {
+  @apply flex flex-col flex-1 h-full overflow-hidden;
 }
 
 html,
@@ -26,4 +26,20 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   transition: background-color 2147483647s;
   -webkit-text-fill-color: hsl(var(--secondary-foreground)) !important;
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+  /* Customize the scrollbar width */
+  @apply w-2;
+}
+
+::-webkit-scrollbar-track {
+  /* Customize the scrollbar track */
+  @apply bg-background;
+}
+
+::-webkit-scrollbar-thumb {
+  /* Customize the scrollbar thumb */
+  @apply bg-accent rounded-full;
 }
